--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://www.verses3to5.com"
+baseurl = "http://www.verses3to5.com/"
 title = "Verses 3 to 5"
 theme = "hugo-universal-theme"
 languageCode = "en-us"
